--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ body {
     font-family: 'Roboto', sans-serif;
     color: #333;
     overflow-x: hidden;
+
 }
 
 body p {
@@ -139,7 +140,7 @@ a:focus {
 }
 
 .text-white {
-    color: black;
+    color: white;
 }
 
 
@@ -371,7 +372,7 @@ i.fa-comment {
 .contact-details-box .contact-details i,
 .contact-details-box .contact-details a {
     display: inline-block;
-    color: black;
+    color: white;
     vertical-align: middle;
 }
 
@@ -2314,7 +2315,7 @@ clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 .box {
     display: inline-block;
     width: 75%;
-    background-color:#D8261C; 
+    background-color:grey;
     margin-left: 13%;
     border-radius: 10px;
     padding-block-start: 15px;
@@ -3791,10 +3792,10 @@ input[type=number]::-webkit-outer-spin-button {
         bottom: 0;
         top: auto;
         transform: translateY(0);
-        background-color: #028F3E;
+        background-color: grey;
         text-align: center;
         width: 100%;
-        border: 1px solid #028F3E;
+        border: 1px solid grey;
     }
     #mobile-bottom-fixed .col-xs-4 {
         padding: 0;
